Changed layout of manual repairing and allowed toggling add row

--- a/templates/data_preparation/manual_repairing.html
+++ b/templates/data_preparation/manual_repairing.html
@@ -6,10 +6,11 @@
 <!-- My js for display_table -->
 <script src="{{ url_for('static', filename='js/manual_repairing.js')}}" type="text/javascript"></script>
 
+<button type="submit" class="btn btn-info m-2" id="show_add_row" name="show_add_row" value="true">Add row toggle</button>
 <form action="#" method="POST" class="mb-3">
   <div class="row mb-3 g-3 mt-1">
-    <div class="row col-12">
-        <h3>Add row:</h3>
+    <div class="row col-12" id="add_row_div">
+        {# <h3>Add row:</h3> #}
         {# {% if additional_args[0] %} #}
         {% for column_name in additional_args[0][0].keys() %}
             {% if column_name != "generated_index" %}
@@ -21,7 +22,7 @@
         {% endfor %}
         <button type="submit" class="btn btn-success m-2 mt-3" name="submit_add_row" value="true">Add row</button>
     </div>
-    <div class="row col-12 ">
+    <div class="row col-6 ">
         <div class="col-6">
             <h3>Remove row:</h3>
             <div class="mt-1">
@@ -74,62 +75,64 @@
                 </select>
             </div>
         </div>
-        <button type="submit" class="btn btn-info m-2 mt-3" name="submit_change_column_type" value="true">Change column type</button>
-    </div>
-    <div class="col-4 row">
-        <h3>Change column name:</h3>
-        <div class="col-6">
-            <div class="mt-1">
-                <label for="change_column_name" class="form-label">Current column name</label>
-                <select id="change_column_name" name="change_column_name" class="form-select">
-                    <option selected>None</option>
-                    {% if additional_args[0] %}
-                        {% for column_name in additional_args[0][0].keys() %}
-                            <option {% if request.form['change_column_name']==column_name %}selected{% endif %}>{{column_name}}</option>
-                        {% endfor %}
-                    {% endif %}
-                </select>
-            </div>
-        </div>
-        <div class="col-6">
-            {# <h3 style="visibility: hidden;">CSS go brrrrr</h3> #}
-            <div class="mt-1">
-                <label for="new_column_name" class="form-label">New column name:</label>
-                <input type="text" class="form-control" name="new_column_name" id="new_column_name">
-            </div>
-        </div>
-        <button type="submit" class="btn btn-info m-2 mt-3" name="submit_change_column_name" value="true">Change column name</button>
+        <button type="submit" class="btn btn-info m-2 mt-4" name="submit_change_column_type" value="true">Change column type</button>
     </div>
     <div class="col-6 row">
-        <h3>Change category:</h3>
-        <div class="col-4">
-            <div class="mt-1">
-                <label for="change_category_column_name" class="form-label">Column name</label>
-                <select id="change_category_column_name" name="change_category_column_name" class="form-select">
-                    <option selected>None</option>
-                    {% if additional_args[1] %}
-                        {% for column_name in additional_args[1].keys() %}
-                            {% if additional_args[1][column_name] in ["category"] %}
-                                <option {% if request.form['change_category_column_name'] == column_name %}selected{% endif %}>{{column_name}}</option>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                </select>
+        <div class="row">
+            <h3>Change column name:</h3>
+            <div class="col-6">
+                <div class="mt-1">
+                    <label for="change_column_name" class="form-label">Current column name</label>
+                    <select id="change_column_name" name="change_column_name" class="form-select">
+                        <option selected>None</option>
+                        {% if additional_args[0] %}
+                            {% for column_name in additional_args[0][0].keys() %}
+                                <option {% if request.form['change_column_name']==column_name %}selected{% endif %}>{{column_name}}</option>
+                            {% endfor %}
+                        {% endif %}
+                    </select>
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="mt-1">
-                <label for="change_category_occurence_before" class="form-label">Current category name:</label>
-                <input type="text" class="form-control" name="change_category_occurence_before" id="change_category_occurence_before">
+            <div class="col-4">
+                {# <h3 style="visibility: hidden;">CSS go brrrrr</h3> #}
+                <div class="mt-1">
+                    <label for="new_column_name" class="form-label">New column name:</label>
+                    <input type="text" class="form-control" name="new_column_name" id="new_column_name">
+                </div>
             </div>
+            <button type="submit" class="btn btn-info m-2 mt-3" name="submit_change_column_name" value="true">Change column name</button>
         </div>
-        <div class="col-4">
-            <div class="mt-1">
-                <label for="change_category_occurence_after" class="form-label">New name:</label>
-                <input type="text" class="form-control" name="change_category_occurence_after" id="change_category_occurence_after">
+        <div class="row">
+            <h3>Change category:</h3>
+            <div class="col-4">
+                <div class="mt-1">
+                    <label for="change_category_column_name" class="form-label">Column name</label>
+                    <select id="change_category_column_name" name="change_category_column_name" class="form-select">
+                        <option selected>None</option>
+                        {% if additional_args[1] %}
+                            {% for column_name in additional_args[1].keys() %}
+                                {% if additional_args[1][column_name] in ["category"] %}
+                                    <option {% if request.form['change_category_column_name'] == column_name %}selected{% endif %}>{{column_name}}</option>
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+                    </select>
+                </div>
             </div>
+            <div class="col-4">
+                <div class="mt-1">
+                    <label for="change_category_occurence_before" class="form-label">Current category name:</label>
+                    <input type="text" class="form-control" name="change_category_occurence_before" id="change_category_occurence_before">
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="mt-1">
+                    <label for="change_category_occurence_after" class="form-label">New name:</label>
+                    <input type="text" class="form-control" name="change_category_occurence_after" id="change_category_occurence_after">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-info m-2 mt-3" name="submit_change_category_name" value="true">Change category name</button>
         </div>
-        <button type="submit" class="btn btn-info m-2 mt-3" name="submit_change_category_name" value="true">Change category name</button>
     </div>
   </div>
 </form>
