--- a/templates/data_preparation/automatic_preparation.html
+++ b/templates/data_preparation/automatic_preparation.html
@@ -6,7 +6,7 @@
 <!-- My js for display_table -->
 {#
 <script src="{{ url_for('static', filename='js/manual_repairing.js')}}" type="text/javascript"></script> #}
-<label class="form-check-label mb-4 bg-info text-black">manual_repairing, transposing, capping and filtering require domain knowledge and can be semi-automatically done on their respective page.</label>
+<label class="form-check-label mb-3 bg-info text-black">manual_repairing, transposing, capping and filtering require domain knowledge and can be semi-automatically done on their respective page.</label>
 
 <form action="#" method="POST" class="mb-3">
     <div class="row mb-3 g-3">
@@ -55,7 +55,7 @@
     </div>
 </form>
 
-<label class="form-check-label mb-2 text-warning">Depending on your data, it might be beneficial to run the algorithm two times: If you still see 'None' values (missing values) than the algorthm did not catch them. Try re-running it.</label>
+<label class="form-check-label mb-2 text-warning">Depending on your data, it might be beneficial to run the algorithm two times: If you still see 'None' values (missing values) than the algorthm did not catch them. Try re-running it. This is mostly true for numbers</label>
 
 
 {% if additional_args[1] %}
