Added support for h2o basic model training (without user data)

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -92,7 +92,7 @@
                         <hr class="dropdown-divider">
                     </li>
                     <li><a class="dropdown-item" href="#">output_to_file</a></li>
-                    <li><a class="dropdown-item" href="#">automl_solution_1</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('using_the_data.h2o_automl')}}">h2o_automl</a></li>
                     <li><a class="dropdown-item" href="#">automl_solution_2</a></li>
                 </ul>
             </li>
