changed title to using_the_data

--- a/templates/using_the_data/h2o_automl.html
+++ b/templates/using_the_data/h2o_automl.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %}
 
-{% block title %}Data selection - Select dataset as active{% endblock %}
+{% block title %}Using the data - H2o Automl{% endblock %}
 {% block main_content %}
 
 <form action="#" method="POST">
