--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -91,7 +91,7 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="#">output_to_file</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('using_the_data.output_to_file')}}">output_to_file</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('using_the_data.h2o_automl')}}">h2o_automl</a></li>
                     <li><a class="dropdown-item" href="#">automl_solution_2</a></li>
                 </ul>
