Added basic template of model insights

--- a/templates/base_template.html
+++ b/templates/base_template.html
@@ -93,6 +93,7 @@
                     </li>
                     <li><a class="dropdown-item" href="{{ url_for('using_the_data.output_to_file')}}">output_to_file</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('using_the_data.h2o_automl')}}">h2o_automl</a></li>
+                    <li><a class="dropdown-item" href="{{ url_for('using_the_data.model_insights')}}">model_insights</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('using_the_data.make_predictions')}}">make_predictions</a></li>
                 </ul>
             </li>
