--- a/templates/using_the_data/model_insights.html
+++ b/templates/using_the_data/model_insights.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %}
 
-{% block title %}Using the data - Output to file{% endblock %}
+{% block title %}Using the data - Model insights{% endblock %}
 {% block main_content %}
 
 <form action="#" method="POST">
