--- a/templates/using_the_data/model_insights.html
+++ b/templates/using_the_data/model_insights.html
@@ -3,14 +3,14 @@
 {% block title %}Using the data - Model insights{% endblock %}
 {% block main_content %}
 
-<form action="#" method="POST">
+<form action="#" method="POST" id="h2o_form">
     <div class="row">
         <div class="col-6">
             <label class="form-check-label" for="ml_model_for_statistics">Choose ML model to get statistics:</label>
             <select class="form-select" name="ml_model_for_statistics">
                 <option selected value="None">None</option>
                 {% for ml_model in additional_args[2] %}
-                    <option value="{{ml_model}}">{{ml_model}}</option>
+                    <option {% if request.form['ml_model_for_statistics'] == ml_model %}selected{% endif %} value="{{ml_model}}">{{ml_model}}</option>
                 {% endfor %}
             </select>
             <button type="submit" class="btn btn-primary mt-3" name="submit_ml_model_for_statistics">Get statistics</button>
@@ -31,26 +31,37 @@
     <p class="text-start bg-info text-black">{{additional_args[0][2]}}</p>
 {% endif %}
 
-{% if additional_args[1] == "category" %}
-    <h3>This is a classification machine learning model</h3>
+{% if additional_args[1] == "binomial" %}
+    <h3>This is a classification (binomial) machine learning model</h3>
+    <p class="text-start">This table is the confusion matrix (Represents the prediction summary in matrix form) - It show how many predictions are correct and incorrect per class:</p>
+    <p class="text-start">The first column and row create a matrix with all the classes. Reading the table per row: It shows the values of the actual class (row) and as to what it was predicted (column)</p>
+    <p class="text-start">The last row shows the sum per column. The column Error shows the amount of errors that were made in the classification. The smaller the better. The column Rate shows the Error rate: [errors made] / [predictions made]</p>
+    <p class="text-start">The value on the bottom right shows the total error rate. The lower this number, the better. If you want the accuracy, just subtract this number from 1 (and in percent). e.g. 3/7 --> 1 - 3/7 = 4/7 --> 4/7 * 100 =~ 57% accuracy</p>
+    {{additional_args[0]|safe}}
+{% endif %}
+
+
+{% if additional_args[1] == "multinomial" %}
+    <h3>This is a classification (multinomial) machine learning model</h3>
     <!-- My css for display_table -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/display_table.css')}}" />
     
     <p class="text-start">This table is the confusion matrix (Represents the prediction summary in matrix form) - It show how many predictions are correct and incorrect per class:</p>
-    <p class="text-start">The first column and row create a matrix with all the classes. Reading the table per row: It shows the values of the actual class (row - first column '-'') and as to what it was predicted (column name)</p>
+    <p class="text-start">The first column and row create a matrix with all the classes. Reading the table per row: It shows the values of the actual class (row) and as to what it was predicted (column)</p>
     <p class="text-start">The last row shows the sum per column. The column Error shows the amount of errors that were made in the classification. The smaller the better. The column Rate shows the Error rate: [errors made] / [predictions made]</p>
-    <p class="text-start">The value on the bottom right shows the total error rate. The lower this number, the better. If you want the accuracy, just subtract this number from 1 (and in percent). e.g. 3/7 --> 1 - 3/7 = 4/7 --> 4/7 * 100 =~ 57% accuracy</p>
+    <p class="text-start">The value on the bottom right (last page) shows the total error rate. The lower this number, the better.</p>
+    <p class="text-start bg-info text-black">Accuracy: {{additional_args[0][1]}}%</p>
     
     <table id="data" class="table table-dark table-striped display_table">
         <thead>
             <tr>
-                {% for column_name in additional_args[0][0].keys() %}
+                {% for column_name in additional_args[0][0][0].keys() %}
                 <th>{{column_name}}</th>
                 {% endfor %}
             </tr>
         </thead>
         <tbody>
-            {% for entry in additional_args[0] %}
+            {% for entry in additional_args[0][0] %}
             <tr>
                 {% for column_name in entry %}
                 <td>{{ entry[column_name] }}</td>
@@ -63,11 +74,21 @@
     <script>
         // Display tables functionality
         $(document).ready(function () {
-            $(".display_table").DataTable();
+            $(".display_table").DataTable({
+                scrollX: true,
+                "order": []
+            });
         });
     </script>
 {% endif %}
 
+<script>
+    $("#h2o_form").submit(function( event ) {
+        setTimeout(function() {
+            alert("Fetching your model statistics. This should not take longer than 60 seconds. Please do not (!!!) leave this page.")
+        }, 3000)
+    })
+</script>
 
 
 {% endblock %}
